Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.terraform.yml
+++ b/azure-pipelines.terraform.yml
@@ -6,8 +6,7 @@ pool:
 trigger:
   branches: 
     include:
-      #- master
-      - feature/terraform
+      - master
   paths:
     include:
       - terraform
