Update azure-pipelines.terraform.yml for Azure Pipelines

--- a/azure-pipelines.terraform.yml
+++ b/azure-pipelines.terraform.yml
@@ -13,6 +13,11 @@ trigger:
       - auzre-pipelines.terraform.yml
 
 steps:
+- task: TerraformCLI@0
+  inputs:
+    command: 'validate'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/terraform'
+    allowTelemetryCollection: true
 # Verify template and generate terraform plan
 - script: |
     echo 'cmd: terraform fmt -check=true'
