--- a/azure-pipelines.terraform.yml
+++ b/azure-pipelines.terraform.yml
@@ -6,7 +6,8 @@ pool:
 trigger:
   branches: 
     include:
-      - master
+      - main
+  
   paths:
     include:
       - terraform
@@ -18,17 +19,18 @@ steps:
     command: 'validate'
     workingDirectory: '$(System.DefaultWorkingDirectory)/terraform'
     allowTelemetryCollection: true
-# Verify template and generate terraform plan
-- script: |
-    echo 'cmd: terraform fmt -check=true'
-    cd terraform    
-    terraform fmt -check
-  displayName: Verify terraform template
 
-- script: |
-    echo 'cmd: cp terraform/* ./ $(Build.ArtifactStagingDirectory) -R'
-    cp terraform/* ./ $(Build.ArtifactStagingDirectory) -R  
-  displayName: Copy terraform template to the staging directory
+# Verify template and generate terraform plan
+#- script: |
+#    echo 'cmd: terraform fmt -check=true'
+#    cd terraform    
+#    terraform fmt -check
+#  displayName: Verify terraform template
+
+#- script: |
+#    echo 'cmd: cp terraform/* ./ $(Build.ArtifactStagingDirectory) -R'
+#    cp terraform/* ./ $(Build.ArtifactStagingDirectory) -R  
+#  displayName: Copy terraform template to the staging directory
 
   # Publish build artifacts
-- task: PublishBuildArtifacts@1
+#- task: PublishBuildArtifacts@1
