--- a/azure-pipelines.kube-admin.yml
+++ b/azure-pipelines.kube-admin.yml
@@ -24,7 +24,7 @@ steps:
 - task: AzureCLI@1
   displayName: 'Azure CLI '
   inputs:
-    azureSubscription: 'MTC Denver Sandbox'
+    azureSubscription: 'jcookAIA'
     scriptLocation: inlineScript
     inlineScript: |
       # User ACR to build and tag our container
