Update azure-pipelines.kube-admin.yml for Azure Pipelines

--- a/azure-pipelines.kube-admin.yml
+++ b/azure-pipelines.kube-admin.yml
@@ -31,6 +31,6 @@ steps:
       az acr build -r $(acr_name) -t $(image_name) -f ./src/Dockerfile.KubeAdmin ./src
       
       # Package the helm chart and push it to ACR
-      helm init --client-only
-      helm package charts/kube-admin --version $(Build.BuildNumber)
-      az acr helm push -n $(acr_name) kube-admin-$(Build.BuildNumber).tgz
+#      helm init --client-only
+#      helm package charts/kube-admin --version $(Build.BuildNumber)
+#      az acr helm push -n $(acr_name) kube-admin-$(Build.BuildNumber).tgz
