--- a/azure-pipelines.kube-admin.yml
+++ b/azure-pipelines.kube-admin.yml
@@ -27,10 +27,12 @@ steps:
     azureSubscription: 'jcookAIA'
     scriptLocation: inlineScript
     inlineScript: |
+      az acr login --name $(acr_name)
+
       # User ACR to build and tag our container
       az acr build -r $(acr_name) -t $(image_name) -f ./src/Dockerfile.KubeAdmin ./src
       
       # Package the helm chart and push it to ACR
-#      helm init --client-only
-#      helm package charts/kube-admin --version $(Build.BuildNumber)
-#      az acr helm push -n $(acr_name) kube-admin-$(Build.BuildNumber).tgz
+      helm init --client-only
+      helm package charts/kube-admin --version $(Build.BuildNumber)
+      az acr helm push -n $(acr_name) kube-admin-$(Build.BuildNumber).tgz
