--- a/azure-pipelines.kube-admin.yml
+++ b/azure-pipelines.kube-admin.yml
@@ -30,9 +30,16 @@ steps:
       az acr login --name $(acr_name)
 
       # User ACR to build and tag our container
-      az acr build -r $(acr_name) -t $(image_name) -f ./src/Dockerfile.KubeAdmin ./src
+      #az acr build -r $(acr_name) -t $(image_name) -f ./src/Dockerfile.KubeAdmin ./src
       
       # Package the helm chart and push it to ACR
       helm init --client-only
       helm package charts/kube-admin --version $(Build.BuildNumber)
       az acr helm push -n $(acr_name) kube-admin-$(Build.BuildNumber).tgz
+
+- task: ContainerBuild@0
+  inputs:
+    dockerRegistryServiceConnection: 'ACRDockerRegistry'
+    repository: 'demomtcappdevwhackamolev2devacr'
+    Dockerfile: './src/Dockerfile.KubeAdmin'
+    tags: '$(image_name)'
