Update azure-pipelines.kube-admin.yml for Azure Pipelines

--- a/azure-pipelines.kube-admin.yml
+++ b/azure-pipelines.kube-admin.yml
@@ -50,4 +50,4 @@ steps:
     repository: 'whack-a-mole'
     command: 'buildAndPush'
     Dockerfile: './src/Dockerfile.KubeAdmin'
-    tags: '$(image_name)'
+    tags: '$(Build.BuildNumber)'
