--- a/azure-pipelines.kube-admin.yml
+++ b/azure-pipelines.kube-admin.yml
@@ -46,7 +46,7 @@ steps:
 
 - task: Docker@2
   inputs:
-    containerRegistry: 'ACRDockerRegistry'
+    containerRegistry: 'ACRDockerRegistryaa'
     repository: 'whack-a-mole'
     command: 'buildAndPush'
     Dockerfile: './src/Dockerfile.KubeAdmin'
