--- a/.github/workflows/whack-a-mole-admin.yaml
+++ b/.github/workflows/whack-a-mole-admin.yaml
@@ -1,8 +1,9 @@
 name: Build a Docker image and Push it to ACR
 
 on:
-  workflow_dispatch:
-
+ workflow_dispatch:
+   branches:
+     - master
 jobs:
   build-and-push-docker-image:
     runs-on: ubuntu-latest
