--- a/.github/workflows/whack-a-mole-admin.yaml
+++ b/.github/workflows/whack-a-mole-admin.yaml
@@ -1,9 +1,10 @@
 name: Build a Docker image and Push it to ACR
 
 on:
- workflow_dispatch:
-   branches:
-     - master
+  push:
+    branches:
+      - dev
+
 jobs:
   build-and-push-docker-image:
     runs-on: ubuntu-latest
