--- a/.github/workflows/whack-a-mole-admin.yaml
+++ b/.github/workflows/whack-a-mole-admin.yaml
@@ -2,7 +2,7 @@ name: Build a Docker image and Push it to ACR
 
 on:
   workflow_dispatch:
-  push:
+#  push:
     branches:
       - dev
 
@@ -10,10 +10,11 @@ jobs:
   build-and-push-docker-image:
     runs-on: ubuntu-latest
     steps:
-    - name: Get code from the repository
-      uses: actions/checkout@v1
-      with:
-        ref: main
+    - name: Checkout Repository
+      uses: actions/checkout@master
+#      uses: actions/checkout@v1
+#      with:
+#        ref: main
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v1.1.0
