--- a/.github/workflows/whack-a-mole-admin.yaml
+++ b/.github/workflows/whack-a-mole-admin.yaml
@@ -3,8 +3,8 @@ name: Build a Docker image and Push it to ACR
 on:
   workflow_dispatch:
 #  push:
-    branches:
-      - dev
+#    branches:
+#      - dev
 
 jobs:
   build-and-push-docker-image:
