--- a/.github/workflows/whack-a-mole-admin.yaml
+++ b/.github/workflows/whack-a-mole-admin.yaml
@@ -13,8 +13,8 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@master
 #      uses: actions/checkout@v1
-#      with:
-#        ref: main
+      with:
+        ref: dev
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v1.1.0
