--- a/azure-pipelines.kube-admin.yml
+++ b/azure-pipelines.kube-admin.yml
@@ -17,7 +17,7 @@ trigger:
       - azure-pipelines.kube-admin.yml
 
 variables:
-  acr_name: demomtcappdevwhackamolev2devacr.azurecr.io
+  acr_name: demomtcappdevwhackamolev2devacr
   image_name: whack-a-mole/kube-admin:$(Build.BuildNumber)
 
 steps:
