--- a/src/Dockerfile.KubeAdmin
+++ b/src/Dockerfile.KubeAdmin
@@ -7,7 +7,7 @@ RUN dotnet restore ./WhackAMole.KubeAdmin/WhackAMole.KubeAdmin.csproj
 
 COPY . ./
 
-RUN dotnet publish ./WhackAMole.KubeAdmin/WhackAMole.KubeAdmin.csproj -c Debug -o out
+RUN dotnet publish ./WhackAMole.KubeAdmin/WhackAMole.KubeAdmin.csproj -c Debug -o ./WhackAMole.KubeAdmin/out
 
 
 FROM mcr.microsoft.com/dotnet/runtime:6.0
